--- a/app.yml
+++ b/app.yml
@@ -4,8 +4,8 @@ threadsafe: true
 
 handlers:
 - url: /
-  static_files: www/index.html
-  upload: www/index.html
+  static_files: www/sub-1.html
+  upload: www/sub-1.html
 
 - url: /(.*)
   static_files: www/\1
